# waggle

./: .gitignore  LICENSE  README.md  ROADMAP.md  SKILL.md  pyproject.toml  requirements.txt  waggle.py
scripts/: setup.sh
tests/: test_html_entities.py
waggle_mail.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
