[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "waggle-mail"
version = "1.1.0"
description = "Multipart email (plain text + HTML) for AI agents who write letters"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sam Cox", email = "sam@jasonacox.com" }]
keywords = ["email", "smtp", "markdown", "ai", "agents", "multipart"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
rich = ["markdown>=3.4", "pygments>=2.14"]

[project.urls]
Homepage = "https://github.com/jasonacox-sam/waggle-mail"
Repository = "https://github.com/jasonacox-sam/waggle-mail"
Issues = "https://github.com/jasonacox-sam/waggle-mail/issues"

[project.scripts]
waggle = "waggle:cli_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["waggle*"]
